# kent-hack-it

./: .gitignore  README.md  Solution_Template.md  env.template  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: db.mjs  server.mjs  utils.mjs
backend/challenge_archives/: README.txt
backend/controllers/: oauthController.mjs
backend/routes/: admin.mjs  adminCtf.mjs  ctf.mjs  info.mjs  oauth.mjs  team.mjs  user.mjs
challenges/: .gitignore
challenges/BinaryExploitation/: Dockerfile  docker-compose.yml  entrypoint.sh  programmer.conf  programmer2.conf  programmer3.conf  programmer4.conf  programmer5.conf  write_flags.sh
challenges/ReverseEngineer/: Dockerfile  docker-compose.yml  programmer.conf  programmer2.conf  write_flags.sh
challenges/ReverseEngineer/rev2/Project/: CMakeLists.txt
challenges/ReverseEngineer/rev2/Project/client/: CMakeLists.txt
challenges/ReverseEngineer/rev2/Project/client/cpp/: client.cpp
challenges/ReverseEngineer/rev2/Project/client/hpp/: client.hpp
challenges/ReverseEngineer/rev2/Project/src/: CMakeLists.txt
challenges/ReverseEngineer/rev2/Project/src/cpp/: network.cpp  node.cpp  tunnel.cpp
challenges/ReverseEngineer/rev2/Project/src/hpp/: network.hpp  node.hpp
docker/: Dockerfile  docker-compose.yml  init_mongo.sh  khi  supervisord.conf
public/: index.html  manifest.json
public/challenge_files/: flag.txt  robots.txt
src/: App.css  App.js  index.css
src/backend/: db.js  server.js
src/components/: admin_navbar.js  leader_view.js  member_view.js  navbar.js  prompt.js  purification.js  stats.js
(+299 files in other folders)
